src/index.css
:root {
    --accent: lime;
    --primary: #3b3c3d;
    --secondary: white;
    --padding: .6rem;
    --border-radius: 5px;
}

* {
    font-family: monospace;
}

html {
    color-scheme: dark;
}

body {
    margin: .25rem;
    background-color: black;
}

h1,
h2 {
    font-size: 1.4rem;
    color: var(--accent);
    text-shadow: 1px 1px 2px black, 0 0 1em var(--accent), 0 0 0.2em var(--accent);
    font-family: monospace;
}

h2 {
    font-size: 1.2rem;
}

h3 {
    color: var(--accent);
    border-bottom: var(--primary) 1px solid;
}

button {
    border: none;
    color: var(--secondary);
    padding: var(--padding);
    background-color: inherit;
    border-radius: var(--border-radius);
    box-shadow: 0 2px 1px 0 rgba(255, 255, 255, 0.41), 0 2.5rem 5rem 0 rgba(255, 255, 255, 0.1);
}

button:hover {
    cursor: pointer;
    box-shadow: 0 2px 1px 0 var(--accent), 0 2.5rem 5rem 0 rgba(255, 255, 255, 0.1) !important;
}

input,
select,
.custom-dropdown-input-selector>label {
    border: none;
    color: var(--primary);
    padding: var(--padding);
    accent-color: var(--accent);
    background-color: var(--secondary);
    border-radius: var(--border-radius);
}

input:focus {
    outline: none;
}

dialog {
    background: black;
    border: none;
    border-radius: var(--border-radius);
    box-shadow: 1px 1px 2px black, 0 0 1em gray, 0 0 0.2em gray;
    width: 90vw;
    position: fixed;
}

/* TODO: Make this actually work */
dialog::backdrop {
    background: black !important;
    opacity: 0.5;
}

.section {
    margin: var(--padding);
    padding: var(--padding);
}

.form-input {
    display: flex;
    flex-direction: column;
    margin: var(--padding);
}

.grid-auto-fit {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-gap: 1rem;
}

.grid-col-2 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1rem;
}

.grid-col-3 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1rem;
}

.custom-dropdown-input-selector {
    display: inline-flex;
    border: none;
    color: var(--primary);
    accent-color: var(--accent);
    background-color: var(--secondary);
    border-radius: var(--border-radius);
}

.custom-dropdown-input-selector>select {
    padding: 0;
    outline: none;
}

.flex-centered {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.flex-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0 var(--padding);
}

.close-btn {
    margin: 0;
    box-shadow: none;
    font-size: 1.5rem;
}

.close-btn:hover {
    color: var(--accent);
    box-shadow: none !important;
}

.card {
    background: none;
    margin: var(--padding);
    padding: var(--padding);
    border-radius: var(--border-radius);
    box-shadow: 1px 1px 2px black, 0 0 1em gray, 0 0 0.2em gray;
}

#baudrate-input {
    width: 10ch;
}

